--- a/index.html
+++ b/index.html
@@ -54,4 +54,42 @@
         crossorigin="anonymous"></script>
 </body>
 
+<footer class="bg-dark text-light pt-5">
+    <div class="container">
+        <div class="row">
+            <!-- Contact Information -->
+            <div class="col-md-6 text-start">
+                <img src="assets/logo.png" alt="Icon" class="mb-3" style="width: 80px;">
+                <p>
+                    <strong>Certámenes Filantropía Altruistic Representative Ecuador</strong><br>
+                    <a href="https://m.facebook.com/profile.php?id=100057065275259&name=xhp_nt__fb__action__open_user" target="_blank">
+                        Visítanos en Facebook
+                    </a>
+                </p>
+                <p>
+                    <i class="bi bi-telephone-fill"></i> +593 987 137 796<br>
+                    <i class="bi bi-envelope-fill"></i> sadelmodelos@gmail.com<br>
+                    <i class="bi bi-geo-alt-fill"></i> Quito, Ecuador
+                </p>
+            </div>
+
+            <!-- Sponsors -->
+            <div class="col-md-6 mt-5">
+                <h5 class="text-uppercase">Auspiciantes</h5>
+                <ul class="list-unstyled" style="padding-right: 20px;">
+                    <li class="mb-2"><b>SADEL MODEL:</b> 
+                        <a href="https://m.facebook.com/sadelmodelos/" class="text-light text-decoration-none" target="_blank">https://m.facebook.com/sadelmodelos/</a></li>
+                    <li class="mb-2"><b>FUNCIONA CREATIVO:</b> 
+                        <a href="https://m.facebook.com/funcionacreativo/" class="text-light text-decoration-none" target="_blank">https://m.facebook.com/funcionacreativo/</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="text-center py-3 mt-4" style="background-color: #333;">
+            <small>&copy; All rights reserved 2019</small>
+        </div>
+    </div>
+</footer>
+<!-- Bootstrap Icons -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
 </html>
