--- a/index.html
+++ b/index.html
@@ -37,8 +37,67 @@
             <!-- presentación del certamen -->
         </section>
 
-        <section id="categories">
-            <!-- imagenes de categorías -->
+        <section id="categories womans" class="container my-5">
+            <h2 class="text-center text-warning mb-4">Categoría Mujeres</h2>
+            <div id="categoriesCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="assets/img/queen.jpg" class="d-block w-100" alt="Categories Queen">
+                        <div class="carousel-caption d-none d-md-block">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/gold.jpg" class="d-block w-100" alt="Categories Gold">
+                        <div class="carousel-caption d-none d-md-block">
+
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/miss.jpg" class="d-block w-100" alt="Categories Miss">
+                        <div class="carousel-caption d-none d-md-block">
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/img/mrs.jpg" class="d-block w-100" alt="Categories Mrs.">
+                        <div class="carousel-caption d-none d-md-block">
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#categoriesCarousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Anterior</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#categoriesCarousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Siguiente</span>
+                </button>
+            </div>
+        </section>
+
+        <section id="categories men" class="container my-5">
+            <h2 class="text-center text-warning mb-4">Categoría Hombres</h2>
+            <div id="categoriesCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="assets/img/men.jpg" class="d-block w-100" alt="Categories Men">
+                        <div class="carousel-caption d-none d-md-block">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="categories teens" class="container my-5">
+            <h2 class="text-center text-warning mb-4">Categoría Jóvenes</h2>
+            <div id="categoriesCarousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="assets/img/teens.jpg" class="d-block w-100" alt="Categories Teens">
+                        <div class="carousel-caption d-none d-md-block">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         
         <section id="sponsors">
