feat: presentacion inicio

--- a/index.html
+++ b/index.html
@@ -23,8 +23,27 @@
       </div>
     </div>
   </nav>
-
+  <section id="presentación" class="flex items-center justify-between bg-gray-800 px-10 ">
+    <div class="hero-text w-full md:w-1/2">
+      <h1 class="text-yellow-500 text-6xl font-bold mb-6">Concurso de Belleza</h1>
+      <h2 class="text-yellow-500 text-2xl font-bold mb-6">¡Sé parte de algo extraordinario!</h2>
+      <p class="text-gray-300 text-lg leading-relaxed">
+        Únete al evento de belleza más esperado del año. El gran escenario internacional te espera en México, del 20 al 27 de abril.
+        <br>
+        Únete a esta experiencia única y representa lo mejor de Ecuador al mundo.
+      </p>
+      <a href="#categories" class="mt-6 inline-block bg-yellow-500 text-white font-bold py-3 px-6 rounded hover:bg-yellow-400 transition">
+        Descubre más
+      </a>
+    </div>
+    <div class="hero-image w-full md:w-1/2">
+      <img src="assets/modelo.png" alt="Imagen de Participante" class="rounded-lg object-cover">
+    </div>
+  </section>
+  
   <main class="mt-20">
+
+    
     <section id="categories" class="container mx-auto my-10">
       <h2 class="text-center text-yellow-500 text-3xl font-bold mb-8">Castings</h2>
       <div id="categoriesCarousel" class="relative overflow-hidden">
