--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
 
     <main>
-        <section id="presentation">
+        <section id="presentation" transition-style="in:wipe:up">
             <!-- presentación del certamen -->
         </section>
 
@@ -48,7 +48,7 @@
         <a href="https://wa.link/pmegn8" class="contact-btn btn btn-success">Contáctanos</a>
     </main>
 
-
+    <script src="main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
