feat: estilos responsive en categorias

--- a/index.html
+++ b/index.html
@@ -37,57 +37,57 @@
           <br>
           Únete a esta experiencia única y representa lo mejor de Ecuador al mundo.
         </p>
-        <a href="#categories" class="mt-6 mx-4 inline-block border-2 border-[#eba34e] text-[#eba34e] font-bold py-3 px-6 rounded hover:bg-yellow-400 hover:text-white transition">
+        <a href="#categories" class="mt-6  inline-block border-2 border-[#eba34e] text-[#eba34e] font-bold py-3 px-6 rounded hover:bg-yellow-400 hover:text-white transition">
           Descubre más
         </a>
       </div>
         <img src="assets/modelo.png" alt="Imagen de Participante" class="absolute md:static bottom-0 object-cover w-[80%] md:w-[50%] right-0 transition-transform duration-300  ">
     </section>
     <section id="categories" transition-style="in:wipe:up" class="container mx-auto my-10">
-      <h2 class="text-center text-yellow-500 text-3xl font-bold mb-8">Castings</h2>
+      <h2 class="text-center text-white text-3xl font-bold mb-8">Castings</h2>
       <div id="categoriesCarousel" class="relative overflow-hidden">
         <div class="carousel-inner flex transition-transform duration-700 ease-in-out">
           <!-- Queen -->
-          <div class="carousel-item flex-shrink-0 w-full flex flex-col md:flex-row items-center justify-between">
+          <div class="carousel-item flex-shrink-0 w-full flex flex-col md:flex-row items-center justify-between px-4">
             <div class="carousel-text p-5 md:w-1/2">
-              <h3 class="text-yellow-500 text-7xl font-bold">Categoría Queen</h3>
+              <h3 class="text-yellow-500 text-3xl md:text-7xl font-bold ">Categoría Queen</h3>
             </div>
-            <img src="assets/img/queen.jpg" alt="Categoría Queen" class="w-full md:w-1/2 object-cover rounded-lg transition duration-300 ease-in-out hover:scale-102">
+            <img src="assets/img/queen.jpg" alt="Categoría Queen" class=" border-2 border-[#eba34e] w-full md:w-1/2 object-cover rounded-lg transition duration-300 ease-in-out hover:scale-102">
           </div>
           <!-- Gold -->
-          <div class="carousel-item flex-shrink-0 w-full flex flex-col md:flex-row items-center justify-between">
+          <div class="carousel-item flex-shrink-0 w-full flex flex-col md:flex-row items-center justify-between px-4">
             <div class="carousel-text p-5 md:w-1/2">
-              <h3 class="text-yellow-500 text-7xl font-bold">Categoría Gold</h3>
+              <h3 class="text-yellow-500 text-3xl md:text-7xl font-bold ">Categoría Gold</h3>
             </div>
-            <img src="assets/img/gold.jpg" alt="Categoría Gold" class="w-full md:w-1/2 object-cover rounded-lg transition duration-300 ease-in-out hover:scale-102">
+            <img src="assets/img/gold.jpg" alt="Categoría Gold" class=" border-2 border-[#eba34e] w-full md:w-1/2 object-cover rounded-lg transition duration-300 ease-in-out hover:scale-102">
           </div>
           <!-- Miss -->
-          <div class="carousel-item flex-shrink-0 w-full flex flex-col md:flex-row items-center justify-between">
+          <div class="carousel-item flex-shrink-0 w-full flex flex-col md:flex-row items-center justify-between px-4">
             <div class="carousel-text p-5 md:w-1/2">
-              <h3 class="text-yellow-500 text-7xl font-bold">Categoría Miss</h3>
+              <h3 class="text-yellow-500 text-3xl md:text-7xl font-bold ">Categoría Miss</h3>
             </div>
-            <img src="assets/img/miss.jpg" alt="Categoría Miss" class="w-full md:w-1/2 object-cover rounded-lg transition duration-300 ease-in-out hover:scale-102">
+            <img src="assets/img/miss.jpg" alt="Categoría Miss" class=" border-2 border-[#eba34e] w-full md:w-1/2 object-cover rounded-lg transition duration-300 ease-in-out hover:scale-102">
           </div>
           <!-- Mrs -->
-          <div class="carousel-item flex-shrink-0 w-full flex flex-col md:flex-row items-center justify-between">
+          <div class="carousel-item flex-shrink-0 w-full flex flex-col md:flex-row items-center justify-between px-4">
             <div class="carousel-text p-5 md:w-1/2">
-              <h3 class="text-yellow-500 text-7xl font-bold">Categoría Mrs.</h3>
+              <h3 class="text-yellow-500 text-3xl md:text-7xl font-bold ">Categoría Mrs.</h3>
             </div>
-            <img src="assets/img/mrs.jpg" alt="Categoría Mrs" class="w-full md:w-1/2 object-cover rounded-lg transition duration-300 ease-in-out hover:scale-102">
+            <img src="assets/img/mrs.jpg" alt="Categoría Mrs" class=" border-2 border-[#eba34e] w-full md:w-1/2 object-cover rounded-lg transition duration-300 ease-in-out hover:scale-102">
           </div>
           <!-- Men -->
-          <div class="carousel-item flex-shrink-0 w-full flex flex-col md:flex-row items-center justify-between">
+          <div class="carousel-item flex-shrink-0 w-full flex flex-col md:flex-row items-center justify-between px-4">
             <div class="carousel-text p-5 md:w-1/2">
-              <h3 class="text-yellow-500 text-7xl font-bold">Categoría Men</h3>
+              <h3 class="text-yellow-500 text-3xl md:text-7xl font-bold ">Categoría Men</h3>
             </div>
-            <img src="assets/img/men.jpg" alt="Categoría Hombres" class="w-full md:w-1/2 object-cover rounded-lg transition duration-300 ease-in-out hover:scale-102">
+            <img src="assets/img/men.jpg" alt="Categoría Hombres" class=" border-2 border-[#eba34e] w-full md:w-1/2 object-cover rounded-lg transition duration-300 ease-in-out hover:scale-102">
           </div>
           <!-- Teens -->
-          <div class="carousel-item flex-shrink-0 w-full flex flex-col md:flex-row items-center justify-between">
+          <div class="carousel-item flex-shrink-0 w-full flex flex-col md:flex-row items-center justify-between px-4">
             <div class="carousel-text p-5 md:w-1/2">
-              <h3 class="text-yellow-500 text-7xl font-bold">Categoría Teens</h3>
+              <h3 class="text-yellow-500 text-3xl md:text-7xl font-bold ">Categoría Teens</h3>
             </div>
-            <img src="assets/img/teens.jpg" alt="Categoría Jóvenes" class="w-full md:w-1/2 object-cover rounded-lg transition duration-300 ease-in-out hover:scale-102">
+            <img src="assets/img/teens.jpg" alt="Categoría Jóvenes" class=" border-2 border-[#eba34e] w-full md:w-1/2 object-cover rounded-lg transition duration-300 ease-in-out hover:scale-102">
           </div>
         </div>
       </div>
