--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
 
 <footer class="bg-dark text-light pt-5">
     <div class="container">
-        <div class="row">
+        <div class="row align-items-center">
             <!-- Contact Information -->
-            <div class="col-md-6 text-start">
-                <img src="assets/logo.png" alt="Icon" class="mb-3" style="width: 80px;">
+            <div class="col-md-4 text-start">
+                <img src="assets/logo.png" alt="Logo" class="mb-3" style="width: 100px;">
                 <p>
                     <strong>Certámenes Filantropía Altruistic Representative Ecuador</strong><br>
-                    <a href="https://m.facebook.com/profile.php?id=100057065275259&name=xhp_nt__fb__action__open_user" target="_blank">
+                    <a href="https://m.facebook.com/profile.php?id=100057065275259&name=xhp_nt__fb__action__open_user" class="text-light text-decoration-none" target="_blank">
                         Visítanos en Facebook
                     </a>
                 </p>
@@ -74,21 +74,32 @@
             </div>
 
             <!-- Sponsors -->
-            <div class="col-md-6 mt-5">
-                <h5 class="text-uppercase">Auspiciantes</h5>
-                <ul class="list-unstyled" style="padding-right: 20px;">
+            <div class="col-md-4 text-center">
+                <h5 class="text-uppercase mb-4">Auspiciantes</h5>
+                <div class="d-flex align-items-center justify-content-center">
+                    <img src="assets/Patrocinador1.jpg" alt="Patrocinador 1" class="mx-3" style="width: 150px; height: auto; border-radius: 10px;">
+                    <span class="mx-2" style="font-size: 24px; font-weight: bold;">X</span>
+                    <img src="assets/Patrocinador2.jpg" alt="Patrocinador 2" class="mx-3" style="width: 150px; height: auto; border-radius: 10px;">
+                </div>
+            </div>
+
+            <!-- Sponsor Links -->
+            <div class="col-md-4 text-end">
+                <ul class="list-unstyled">
                     <li class="mb-2"><b>SADEL MODEL:</b> 
-                        <a href="https://m.facebook.com/sadelmodelos/" class="text-light text-decoration-none" target="_blank">https://m.facebook.com/sadelmodelos/</a></li>
+                        <a href="https://m.facebook.com/sadelmodelos/" class="text-light text-decoration-none" target="_blank">Facebook</a></li>
                     <li class="mb-2"><b>FUNCIONA CREATIVO:</b> 
-                        <a href="https://m.facebook.com/funcionacreativo/" class="text-light text-decoration-none" target="_blank">https://m.facebook.com/funcionacreativo/</a></li>
+                        <a href="https://m.facebook.com/funcionacreativo/" class="text-light text-decoration-none" target="_blank">Facebook</a></li>
                 </ul>
             </div>
         </div>
+        <!-- Footer bottom -->
         <div class="text-center py-3 mt-4" style="background-color: #333;">
             <small>&copy; All rights reserved 2019</small>
         </div>
     </div>
 </footer>
+
 <!-- Bootstrap Icons -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
